--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-content">
     <div class="w3-twothird">
       <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h5 class="w3-padding-32">Намайг Аманбол гэдэг.</h5>
 
       <p class="w3-text-grey">Мэдээллийн технологи гэдэг нь Америкийн Мэдээллийн Технологийн Холбооны (ITAA) тодорхойлсоноор "Компьютер дээр суурилсан мэдээллийн систем, програм хангамж болон техник хангамжийн дизайн, хөгжүүлэлт, хэрэгжүүлэлт, хангамж болон удирдлагыг судлахыг хэлнэ". 
 
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
     <div class="w3-twothird">
       <h1>Lorem Ipsum</h1>
-      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+      <h5 class="w3-padding-32">Хүн болох багаасаа Хүлэг болох унагнаасаа.</h5>
 
       <p class="w3-text-grey">Мэдээллийн технологи гэдэг нь Америкийн Мэдээллийн Технологийн Холбооны (ITAA) тодорхойлсоноор "Компьютер дээр суурилсан мэдээллийн систем, програм хангамж болон техник хангамжийн дизайн, хөгжүүлэлт, хэрэгжүүлэлт, хангамж болон удирдлагыг судлахыг хэлнэ". 
 
@@ -80,7 +80,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+    <h1 class="w3-margin w3-xlarge">Эрдэмтэй хүн даруу</h1>
 </div>
 
 <!-- Footer -->
@@ -93,7 +93,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+ <p>Аманбол<a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
 <script>
