--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .newsBody3{font: "Calibri" 0.8 normal}
 
     </style>
+  <link rel="stylesheet" href="amok.css">
     <link rel="preconnect" href="https://api.jsonbin.io">
     <link rel="preload" as="script" href="moduleNews.js" crossorigin="anonymous">
 <script src="main.js" type="module"></script>
