--- a/index.html
+++ b/index.html
@@ -109,15 +109,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Lorem Ipsum</h1>
       <h5 class="w3-padding-32">Хүн болох багаасаа Хүлэг болох унагнаасаа.</h5>
 
-      <p class="w3-text-grey">Мэдээллийн технологи гэдэг нь Америкийн Мэдээллийн Технологийн Холбооны (ITAA) тодорхойлсоноор "Компьютер дээр суурилсан мэдээллийн систем, програм хангамж болон техник хангамжийн дизайн, хөгжүүлэлт, хэрэгжүүлэлт, хангамж болон удирдлагыг судлахыг хэлнэ". 
-
-     Мэдээллийн технологи нь цахим тооцоолуур болон програм хангамжийг хэрэглэн мэдээллийг хувиргах, хадгалах, хамгаалах, боловсруулах, дамжуулах болон найдвартайгаар хүлээн авах тухайг судалдаг. 
-.</p>
+      <section id="posts">
     </div>
   </div>
 </div>
 
-<div id="posts">
+
     <h1 class="w3-margin w3-xlarge">Эрдэмтэй хүн даруу</h1>
   
 
